Remote Oauth2 Consent Service/psd2obie_microservice/psd-2-rsc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psd-2-rsc
  labels:
    app: psd-2-rsc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psd-2-rsc
  template:
    metadata:
      labels:
        app: psd-2-rsc
    spec:
      containers:
      - name: psd-2-rsc
        image: forgerock/psd-2-rsc:1.0
        ports:
        - containerPort: 8083
        
---
apiVersion: v1
kind: Service
metadata:
  name: psd-2-rsc
  labels:
    app: psd-2-rsc
spec:
  ports:
  - port: 8083
    protocol: TCP
  selector:
    app: psd-2-rsc
