Remote Oauth2 Consent Service/psd2obie_microservice/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host:
    http:
      paths:    
      - path: /psd-2-rsc
        backend:
          serviceName: psd-2-rsc
          servicePort: 8083
      #- path: /psd2-obie-frontend
      - path: /
        backend:
          serviceName: psd2-obie-frontend
          servicePort: 80
